# elasticsearch_plugin

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.md  bulker.cpp  bulker.hpp  deserializer.cpp  deserializer.hpp  elastic_client.cpp  elastic_client.hpp  elasticsearch_client.cpp  elasticsearch_client.hpp  elasticsearch_plugin.cpp  exceptions.hpp  mappings.hpp  mappings.json  serializer.hpp  set-up-an-elasticsearch-cluster-stores-eos-blockchain-data.md
benchmark/: benchmark.md
benchmark/elastic-stack/: docker-compose.yml  elasticsearch.yml
benchmark/mongo-stack/: docker-compose.yml
include/eosio/elasticsearch_plugin/: elasticsearch_plugin.hpp
